# smp-log

./: CMakeLists.txt  README.md
cmake/: smp-logConfig.cmake.in
examples/: 01_basic.cpp  02_levels.cpp  03_fatal_policy.cpp  CMakeLists.txt
include/smp/: log.hpp
